# OceanAI-QA-Agent

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py  models.py  rag.py
assets/: api_endpoints.json  checkout.html  product_specs.md  ui_ux_guide.txt
faiss_index/: faiss_index.faiss  faiss_index.pkl
ui/: Dockerfile  ui.py
