[project]
name = "oceanai-qa-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.121.3",
    "hf-xet>=1.2.0",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.8.1",
    "pymupdf>=1.26.6",
    "pyrefly>=0.42.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "unstructured>=0.18.20",
    "uvicorn>=0.38.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool]
